--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@ html {
   --imp-text-color: #c770f0;
 }
 
+:root {
+  scroll-padding-top: 80px;
+}
+
 .purple {
   color: var(--imp-text-color) !important;
 }
